--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-reactts-eslint-prettier",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3303",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
@@ -11,10 +11,16 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "antd": "^4.20.2",
+    "axios": "^0.27.2",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.31",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -29,6 +35,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
+    "sass": "^1.51.0",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
     "vite-tsconfig-paths": "^3.3.17"
