--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["antd", "loglevel", "reactts"]
+  "cSpell.words": [
+    "antd",
+    "loglevel",
+    "reactts",
+    "Sider"
+  ]
 }
