--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "antd": "^4.20.2",
     "axios": "^0.27.2",
+    "history": "^5.3.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "@vitejs/plugin-react": "^1.3.2",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
@@ -32,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
