--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "antd",
-    "loglevel",
-    "reactts",
-    "Sider"
-  ]
+  "cSpell.words": ["antd", "loglevel", "reactts", "Sider"]
 }
