--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "antd": "^4.20.2",
     "axios": "^0.27.2",
+    "echarts": "^5.3.2",
     "history": "^5.3.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
